@@ -1,5 +1,7 @@
 2011-06-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* shr.el (shr-put-image): Use the new interface for animating images.
+
 	* dgnushack.el: Bind `gnutls-available-p' to `ignore' on XEmacs to
 	avoid compiler warnings.
 
